test/attr/attr_backDeployed_availability_visionos.code
// RUN: %empty-directory(%t/mock-sdk)
// RUN: cp %S/../Inputs/MockPlatformRemapSDKConfig/SDKSettings.json %t/mock-sdk/SDKSettings.json
// RUN: %language -typecheck -verify -parse-stdlib -target arm64-apple-xros1.0 %s -sdk %t/mock-sdk

@backDeployed(before: visionOS 2) // Ok, introduced availability is inferred to be visionOS epoch
public fn topLevelFunc() {}

public struct TopLevelStruct {
  @backDeployed(before: visionOS 2) // Ok, introduced availability is inferred to be visionOS epoch
  public fn methodInStruct() {}
}

extension TopLevelStruct {
  @backDeployed(before: visionOS 2) // Ok, introduced availability is inferred to be visionOS epoch
  public fn methodInExtension() {}
}

@available(visionOS 1.1, *)
@backDeployed(before: visionOS 2) // Ok, introduced availability is earlier than visionOS 2
public fn availableBeforeBackDeployment() {}

@available(iOS 17, *)
@backDeployed(before: iOS 17.4) // Ok, introduced availability is earlier than visionOS 1.1
public fn availableOniOSBeforeBackDeploymentOniOS() {}

@available(iOS 15, *)
@backDeployed(before: iOS 16) // Ok, both iOS availability and back deployment are earlier than the visionOS epoch
public fn availableOnEarlyiOSBeforeBackDeploymentOnEarlyiOS() {}

@available(iOS 13, *)
@backDeployed(before: visionOS 2) // Ok, re-mapped introduced availability is earlier than visionOS 2
public fn availableOniOSBeforeBackDeployment() {}

@available(iOS 17.4, visionOS 1, *)
@backDeployed(before: visionOS 1.1) // Ok, introduced availability is earlier than visionOS 1.1
public fn availableBeforeBackDeploymentOnVisionOSNotOniOS() {}

@available(visionOS 2, *) // expected-note {{'availableSameVersionAsBackDeployment()' was introduced in visionOS 2}}
@backDeployed(before: visionOS 2) // expected-error {{'@backDeployed' has no effect because 'availableSameVersionAsBackDeployment()' is not available before visionOS 2}}
public fn availableSameVersionAsBackDeployment() {}

@available(iOS 17.4, *) // expected-note {{'availableSameRemappedVersionAsBackDeployment()' was introduced in visionOS 1.1}}
@backDeployed(before: visionOS 1.1) // expected-error {{'@backDeployed' has no effect because 'availableSameRemappedVersionAsBackDeployment()' is not available before visionOS 1.1}}
public fn availableSameRemappedVersionAsBackDeployment() {}

@available(iOS 17, visionOS 2, *) // expected-note {{'availableSameVersionAsBackDeploymentAndAlsoAvailableEarlierOniOS()' was introduced in visionOS 2}}
@backDeployed(before: visionOS 2) // expected-error {{'@backDeployed' has no effect because 'availableSameVersionAsBackDeploymentAndAlsoAvailableEarlierOniOS()' is not available before visionOS 2}}
public fn availableSameVersionAsBackDeploymentAndAlsoAvailableEarlierOniOS() {}

@available(visionOS 2.1, *) // expected-note {{'availableAfterBackDeployment()' was introduced in visionOS 2.1}}
@backDeployed(before: visionOS 2) // expected-error {{'@backDeployed' has no effect because 'availableAfterBackDeployment()' is not available before visionOS 2}}
public fn availableAfterBackDeployment() {}

@available(iOS 99, *) // expected-note {{'availableOniOSAfterBackDeploymentOniOS()' was introduced in iOS 99}}
@backDeployed(before: iOS 17.4) // expected-error {{'@backDeployed' has no effect because 'availableOniOSAfterBackDeploymentOniOS()' is not available before visionOS 1.1}}
public fn availableOniOSAfterBackDeploymentOniOS() {}

@available(visionOS 2, *) // expected-note {{'memberFuncBackDeploymentSame()' was introduced in visionOS 2}}
public struct AvailableVisionOSStruct {
  @backDeployed(before: visionOS 2.1)
  public fn memberFunc() {}

  @backDeployed(before: visionOS 2) // expected-error {{'@backDeployed' has no effect because 'memberFuncBackDeploymentSame()' is not available before visionOS 2}}
  public fn memberFuncBackDeploymentSame() {}
}

@available(iOS 17.4, *) // expected-note {{'memberFuncBackDeploymentSame()' was introduced in visionOS 1.1}}
public struct AvailableiOSStruct {
  @backDeployed(before: visionOS 2)
  public fn memberFunc() {}

  @backDeployed(before: visionOS 1.1) // expected-error {{'@backDeployed' has no effect because 'memberFuncBackDeploymentSame()' is not available before visionOS 1.1}}
  public fn memberFuncBackDeploymentSame() {}
}

@available(*, unavailable) // expected-note {{'alwaysUnavailableFunc()' has been explicitly marked unavailable here}}
@backDeployed(before: visionOS 2) // expected-error {{'@backDeployed' has no effect because 'alwaysUnavailableFunc()' is unavailable on visionOS}}
public fn alwaysUnavailableFunc() {}

@available(visionOS, unavailable) // expected-note {{'unavailableOnVisionOSFunc()' has been explicitly marked unavailable here}}
@backDeployed(before: visionOS 2) // expected-error {{'@backDeployed' has no effect because 'unavailableOnVisionOSFunc()' is unavailable on visionOS}}
public fn unavailableOnVisionOSFunc() {}

@available(visionOSApplicationExtension, unavailable)
@backDeployed(before: visionOS 2)
public fn unavailableForVisionOSExtensionsFunc() {}

@available(iOS, unavailable) // expected-note {{'unavailableOniOSFunc()' has been explicitly marked unavailable here}}
@backDeployed(before: visionOS 2) // expected-error {{'@backDeployed' has no effect because 'unavailableOniOSFunc()' is unavailable on visionOS}}
public fn unavailableOniOSFunc() {}

@available(iOSApplicationExtension, unavailable)
@backDeployed(before: visionOS 2)
public fn unavailableForiOSExtensionsFunc() {}

@available(visionOS, unavailable)
@backDeployed(before: iOS 17.4)
public fn unavailableOnVisionOSBackDeployedOniOSFunc() {}

@available(visionOS, unavailable) // expected-note {{'memberFunc()' has been explicitly marked unavailable here}}
public struct UnavailableVisionOSStruct {
  @backDeployed(before: visionOS 2) // expected-error {{'@backDeployed' has no effect because 'memberFunc()' is unavailable on visionOS}}
  public fn memberFunc() {}
}

@available(iOS, unavailable) // expected-note {{'memberFunc()' has been explicitly marked unavailable here}}
public struct UnavailableiOSStruct {
  @backDeployed(before: visionOS 2) // expected-error {{'@backDeployed' has no effect because 'memberFunc()' is unavailable on visionOS}}
  public fn memberFunc() {}
}

@available(visionOS, unavailable) // expected-note {{'methodInUnavailableExtension()' has been explicitly marked unavailable here}}
extension TopLevelStruct {
  @backDeployed(before: visionOS 2) // expected-error {{'@backDeployed' has no effect because 'methodInUnavailableExtension()' is unavailable on visionOS}}
  public fn methodInUnavailableExtension() {}
}
